# storage/api-docs/api-docs.json
@@ -447,6 +447,32 @@
                 ]
             }
         },
+        "/api/cart/delete": {
+            "post": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Delete products From cart",
+                "description": "Delete Cart",
+                "operationId": "delete",
+                "responses": {
+                    "200": {
+                        "description": "Cart Item Deleted Successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/": {
             "get": {
                 "description": "Home page",
